<?xml version="1.0"?>
<package format="3">
  <name>jsk_rqt_plugins</name>
  <version>3.0.0</version>
  <description>The jsk_rqt_plugins package (ROS2 port)</description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/jsk-ros-pkg/jsk_visualization</url>
  <url type="bugtracker">http://github.com/jsk-ros-pkg/jsk_visualization/issues</url>
  <url type="website">https://jsk-visualization.readthedocs.io/en/latest/jsk_rqt_plugins/index.html</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend>
  <exec_depend>resource_retriever</exec_depend>
  <exec_depend>image_publisher</exec_depend>
  <exec_depend>jsk_gui_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>
</package>
