<?xml version="1.0"?>
<package format="3">
  <name>jsk_interactive_test</name>
  <version>3.0.0</version>
  <description>jsk_interactive_test (ROS2 port)</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jsk_interactive_test</url>

  <author>Kei Okada</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>jsk_interactive</build_depend>
  <build_depend>jsk_interactive_marker</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>jsk_interactive</exec_depend>
  <exec_depend>jsk_interactive_marker</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
